# bowls

./: .bumpversion.cfg  .dockerignore  .editorconfig  .gitignore  .gitpod.dockerfile  .gitpod.yml  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  docker-compose.yaml  fabfile.py  justfile  package.json  pyproject.toml  requirements.production.txt  requirements.txt  ruff.toml
app/: manage.py
app/bowls/: urls.py  views.py
app/bowls/settings/: base.py  development.py  production.py  staging.py
app/bowls/templates/: base.html
app/clubs/: admin.py  models.py  urls.py  views.py
app/clubs/migrations/: 0001_initial.py
app/clubs/templates/clubs/: club_home.html
app/competitions/: admin.py  models.py
app/competitions/migrations/: 0001_initial.py
app/config/: urls.py  version.py  wsgi.py
app/config/settings/: base.py  development.py  production.py  staging.py
app/static/css/: style.css
app/templates/: base.html
app/templates/bowls/: home.html
app/templates/clubs/: club_list.html  player_list.html  team_detail.html  team_list.html
app/utils/: view_class.py
bowls/: nose_runner.py
bowls/bowls/: urls.py  wsgi.py
bowls/bowls/settings/: base.py  development.py  production.py  staging.py
bowls/bowls/templates/bowls/: home.html
bowls/clubs/: api.py  models.py  urls.py
bowls/clubs/migrations/: 0001_initial.py
bowls/clubs/templates/clubs/: club_detail.html  club_home.html  club_list.html
bowls/competitions/: models.py
bowls/competitions/migrations/: 0001_initial.py
bowls/templates/: base.html
bowls/utils/: view_class.py
doc/api/: api_data.js  api_data.json  api_project.js  api_project.json
requirements/: base.txt  development.txt
