[project]
name = "bowls"
version = "1.0.0-rc-0"
readme = "README.md"
description = "A django website to setup a lawn bowls tournament."
requires-python = ">=3.11"
dependencies = ["Django", "psycopg2", "whitenoise", "gunicorn", "dj-database-url"]

[project.optional-dependencies]
dev = [
    "bump2version",
    "django-debug-toolbar",
    "debugpy",
    "factory_boy",
    "Faker",
    "freezegun",
    "mock",
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-django",
    "ruff==0.2.1",          # Keep this in sync with the pre-commit version
    "ruff-lsp",             # language server to use ruff with vim and neovim

    # Static type checking
    "pyright",
    "django-types",
    "djangorestframework-types",
]

[build-system]
requires = ["hatchling", "cython>=3"]
build-backend = "hatchling.build"

[tool.bandit]
# Configuration for bandit security checking tool
exclude_dirs = []

[tool.pyright]
include = ["app"]
exclude = ["**/tests", "**/migrations", "**/vendored", "**/__pycache__"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
markers = [
]
